# raspberry_funny

./: .gitignore  CMakeLists.txt  README.md  camera.py  config.ini  main.cpp
buzzer/: CMakeLists.txt  buzzer.cpp  buzzer.h
camera/: CMakeLists.txt  camera.cpp  camera.h
config/: CMakeLists.txt  config.cpp  ini.cpp  ini.h
controller/: CMakeLists.txt
controller/include/: motor.h  pid.h
controller/src/: motor.cpp  pid.cpp
detector/: CMakeLists.txt  UltraFace.cpp  UltraFace.h  detector.cpp  detector.h  mobilenetv3ssdlite.cpp  nanodet.cpp
sensor/: CMakeLists.txt
sensor/include/: button.h  buzzer.h  camera.h
sensor/src/: button.cpp  buzzer.cpp  camera.cpp
